<resources>
    <string name="app_name">DSMNRU</string>


    <string name="category">Categories</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="add">Add Missing Places</string>
    <string name="login">LogIn</string>
    <string name="bank">Bank</string>
</resources>
